src/styles/ProgressBar.css
.container{
    width:auto;
    height:auto;
    display:flex; 
    flex-direction:row;
    justify-content: center;
    margin-top:40px;
}

.checkpoint{
    height:auto;
    width:100px;
    display:flex;
    flex-direction: column;
    align-items: center;
}

.active-circle{
    height:32px;
    width:32px;
    margin-bottom:5px;
    margin-top:10px;
    border-radius: 100px;
    background-color: #55BDE5;
    border: 2px solid #146887;
    display: flex;
    align-items: center;
    justify-content: center;
}

.active-dot{
    height:10px;
    width:10px;
    border-radius: 100px;
    background-color: #146887;
}

.inactive-circle{
    height:32px;
    width:32px;
    margin-bottom:5px;
    margin-top:10px;
    border-radius: 100px;
    background-color: #55BDE5;
    border: 2px solid #fff;
    display: flex;
    align-items: center;
    justify-content: center;
}

.inactive-dot{
    height:10px;
    width:10px;
    border-radius: 100px;
    background-color: #fff;
}

.icon{
    height: 24px; 
    width:24px;
    color:white;
}

.text-container{
    width:auto;
    height:45px;
    display:flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    gap:5px;
}

.text{
    font-family: Arial, Helvetica, sans-serif;
    color: white;
    text-align: center;
    line-height: 1;
}


.line-container{
    width:160px;
    height:100px;
    margin-right: -34px;
    margin-left:-34px;
    display: flex;
    align-items: center;
}

.active-line{
    flex-grow: 1;
    border: 1px solid #146887;
}

.inactive-line{
    width:100%;
    flex-grow: 1;
    border: 1px solid #fff;
}

